* 2018.03.12 - renamed fgg.misc to misc (with various productivity functions)

* 2018.03.11 - improved wiki listing of soft/packages (added general tags):
               * https://github.com/ctuning/ck/wiki/Shared-soft-descriptions
               * https://github.com/ctuning/ck/wiki/Shared-packages

* 2018.03.09 - added bazel 0.11.1

* 2018.03.08 - added latest version of protobuf + fixed build for windows
             - added experimental mode to "ck install --reuse_deps" to remember deps through installation of sub-deps

* 2018.03.06 - fixed bug in ck virtual env for windows
             - fixed LLVM detection on latest Windows (targets)
             - added cmake packages v3.10.2 for Windows
             - added package to build LLVM on Linux and Windows

* 2018.03.02 - added possibility to reuse env from installed packages during reply

* 2018.03.01 - added CK_ENV_LIB_BOOST_LFLAG_REGEX to boost ...

* 2018.02.27 - fixing bug in the latest ck-env commit

* 2018.02.25 - fixing replay with --deps to prune envs by specific package, not just tags

* 2018.02.22 - added support to select multiple environments separated by comma 
               for "ck vitual env", i.e. ck virtual env:UOA1,UOA2,UOA3

* 2018.02.21 - added CK_LLVM_CONFIG var to LLVM soft desc

* 2018.02.20 - added deps_summary in env module to prepare
               recursive summaries of all resolved deps for reproducibility

* 2018.02.19 - added platform.dsp dummy to be improved later 

* 2018.02.06 - fixed typo with CK_GPU_* env to set GPU freq for individual cores

* 2017.12.21 - added lib-xml2 (Linux); HPCToolKit

* 2017.12.06 - added PAPI and HPCToolKit libmonitor

* 2017.11.21 - added extra_name to ck detect soft to separate various installations
               such as Python 3.6 vs Anaconda Python 3.6

* 2017.11.20 - improved Intel OpenCL detection for 2017 SDK
             - improved CK env for latest Visual Studio 2017 (15.4)
             - fixed detection of latest Android NDK on Windows