@@ -1,4 +1,6 @@
 * 2018.03.12 - renamed fgg.misc to misc (with various productivity functions)
+             - added "ck add_key misc" to update keys in meta of selected entries
+               (needed to add "dimensions" in description of ReQuEST artifacts)
 
 * 2018.03.11 - improved wiki listing of soft/packages (added general tags):
                * https://github.com/ctuning/ck/wiki/Shared-soft-descriptions
